2008-09-11  Jan Hubicka  <jh@suse.cz>

	* gimplify.c (pop_gimplify_context): Free bind_expr_stack.

2008-09-11  Jan Hubicka  <jh@suse.cz>

	* function.c (free_after_compilation): Call insn_locators_free.
	* cfglayout.c (insn_locators_free): New function.
	* rtl.h (insn_locators_free): Declare.

2008-09-11  Jan Hubicka  <jh@suse.cz>

	* ifcvt.c (check_cond_move_block): Make regs argument pointer to vector pointer.
	(cond_move_process_if_block): Update call.

2008-09-11  Jan Hubicka  <jh@suse.cz>

	* toplev.c (dump_memory_report): Call dump_vec_loc_statistics.
	* vec.c: Include hashtab.h
	(vec_descriptor, ptr_hash_entry): New structures.
	(vec_desc_hash, vec_ptr_map): New static variables.
	(hash_descriptor, eq_descriptor, hash_ptr, eq_ptr, vec_descriptor,
	register_overhead, free_overhead, vec_heap_free): New functions.
	(vec_gc_o_reserve_1): ggc_free when resizing to 0.
	(vec_heap_o_reserve_1): free when resizing to 0; add statistics.
	(cmp_statistic, add_statistics, dump_vec_loc_statistics): New functions.

2008-09-11  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/37474
	* tree-vect-analyze.c (vect_supported_load_permutation_p): Check the
	length of load permutation.

2008-09-11  Andreas Schwab  <schwab@suse.de>

	* config/m68k/m68k.h (IRA_COVER_CLASSES): Define.

2008-09-11  Jakub Jelinek  <jakub@redhat.com>

	PR target/37382
	* expmed.c (extract_low_bits): Avoid creating invalid subregs.
	* dse.c (find_shift_sequence): Use extract_low_bits instead of
	simplify_gen_subreg.

2008-09-11  Ira Rosen  <irar@il.ibm.com>

	* tree-vect-transform.c (vectorizable_store): Use the rhs vector type
	for alias check.

2008-09-10  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37338
	* gimplify.c (gimplify_body): Call default_rtl_profile.

	PR target/36904
	* config/rs6000/rs6000-c.c (rs6000_macro_to_expand): Return NULL
	instead of tok->val.node if not expanding to something else.  Handle
	intervening CPP_PADDING tokens.